--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+  <style>
+    p {
+      line-height: 50px;
+      padding: 10px;
+      border: 1px solid goldenrod;
+    }
+  </style>
+  </head>
   <body>
-    This is a memo.
+    <div>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+      <p>This is a memo.</p>
+    </div>
+    
   </body>
 </html>
